fix(scroll): remove scrollbar on linux

--- a/pan3d/ui/css/preview.css
+++ b/pan3d/ui/css/preview.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 .summary-toolbar {
     position: absolute;
     top: 1rem;
